--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,7 @@
   <version>1.0-SNAPSHOT</version>
 
   <name>WordToJsonConverter</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+  <url>www.panavis.com</url>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,6 +27,12 @@
       <groupId>org.apache.poi</groupId>
       <artifactId>poi-ooxml</artifactId>
       <version>4.0.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20180813</version>
+      <type>bundle</type>
     </dependency>
   </dependencies>
 
