--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
       <version>20180813</version>
       <type>bundle</type>
     </dependency>
+    <dependency>
+      <groupId>com.googlecode.json-simple</groupId>
+      <artifactId>json-simple</artifactId>
+      <version>1.1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
