--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.nexttran.Primo</groupId>
-  <artifactId>Primo</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <groupId>com.nexttran.primo</groupId>
+  <artifactId>PrimoRunner</artifactId>
+  <version>0.1</version>
 
   <name>Primo</name>
   <url>www.panavis.com</url>
@@ -32,8 +32,7 @@
     <dependency>
       <groupId>org.json</groupId>
       <artifactId>json</artifactId>
-      <version>20180813</version>
-      <type>bundle</type>
+      <version>20160810</version>
     </dependency>
     <dependency>
       <groupId>com.googlecode.json-simple</groupId>
